<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Comingoo</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="confirm_start" translatable="false">Confirmer le lieu de départ</string>
    <string name="language_value">Francais</string>
    <string name="facebook_app_id" translatable="false">1914646915254873</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1914646915254873</string>
    <string name="Acceuil">Acceuil</string>
    <string name="Historique">Historique</string>
    <string name="Notification">Notifications</string>
    <string name="Inbox">Inbox</string>
    <string name="Invitervosamis">Inviter vos amis</string>
    <string name="Comingooandyou">Comingoo &amp; YOU</string>
    <string name="Aide">Aide</string>
    <string name="Sedeconnecter">Devenir driver ? <a href="https://www.comingoo.com/driver"></a></string>
    <string name="txt_recent_place">Recent Place</string>
    <string name="txt_favourite_place">Favourite Place</string>
    <string name="txt_ignore">Ignore</string>
    <string name="txt_pick_up">Pick Up</string>
    <string name="txt_enter_promo_code">Please Enter Promo Code</string>
    <string name="txt_promo_code_expired">Promo Code is expired</string>
    <string name="bonne_music_txt">bonne Music</string>
    <string name="image_warning_txt">Ajouter une image</string>
    <string name="message_warning_txt">message envoyé.</string>
    <string name="autre_txt">Autre</string>
    <string name="itineraire_txt">Itinéraire</string>
    <string name="conduite_txt">Conduite</string>
    <string name="voiture_txt">Etat de la voiture</string>
    <string name="arrive_txt">Heure d\'arrivée</string>
    <string name="voirture_txt">bonneVoirture</string>
    <string name="voiture_propre_txt">voiturePropre</string>
    <string name="sur_casablanca_txt">On est seulement disponible sur Casablanca!</string>
    <string name="vous_apple_txt">vous appelle</string>
    <string name="vous_avez_txt">Vous avez annulé beaucoup de fois, l’application va se bloquer pendant 1h</string>
    <string name="image_choisi_txt">image choisi</string>
    <string name="invite_txt">Bonjour, Je vous invite a utiliser l\'application Comingoo pour vos déplacements. www.comingoo.com/app</string>
    <string name="close_txt">Fermer</string>
    <string name="no_internet_txt">Pas de connexion Internet</string>
    <string name="internet_warning_txt">S\'il vous plaît activer la connexion Internet pour continuer</string>
    <string name="speech_input_warning_txt">Votre appareil ne prend pas en charge la saisie vocale</string>
    <string name="location_permission_txt">Emplacement requis</string>
    <string name="location_permission_warning_txt">Cette application a besoin de l\'autorisation d\'emplacement. Veuillez accepter d\'utiliser la fonctionnalité d\'emplacement.</string>
    <string name="ok_txt">D\'accord</string>
    <string name="permission_denied_txt">permission refusée</string>
    <string name="fb_not_installed_txt">Facebook n\'a pas été installé.</string>
    <string name="no_email_txt">Ne pas obtenir votre adresse email</string>
    <string name="account_blocked_txt">Ce compte est bloqué</string>
    <string name="database_checking_txt">Nombre déjà dans la base de données</string>
    <string name="wrong_code_txt">MAUVAIS CODE VEUILLEZ ESSAYER À NOUVEAU</string>
    <string name="enter_otp_txt">S\'il vous plaît entrez votre code OTP</string>
    <string name="error_txt">Erreur!!!</string>
    <string name="incoming_call_txt">Appel entrant</string>
    <string name="thank_you_txt">Je vous remercie</string>
    <string name="promocode_txt">CODE PROMO</string>
    <string name="promoce_expired_txt">Le code promo a expiré</string>
    <string name="promocode_validation_txt">S\'il vous plaît entrer le code promo</string>
    <string name="no_driver_txt">Aucun pilote trouvé, veuillez réessayer</string>
    <string name="back_exit_txt">Veuillez cliquer à nouveau sur RETOUR pour quitter.</string>
    <string name="expert_navagation_txt">navigationexpert</string>
    <string name="exilent_service_txt">excellentservice</string>
    <string name="service_txt">Un service</string>
    <string name="draw_path_warning_txt">Quelque chose a mal tourné pour tracer le chemin</string>
    <string name="txt_home">Maison</string>
    <string name="txt_work">Travail</string>
    <string name="txt_device_no_support_speech">Su dispositivo no admite entrada de voz</string>
    <string name="txt_cancel">cancelar</string>
    <string name="txt_open_location">configuración de ubicación abierta</string>
    <string name="txt_location_permission">El servicio de localización no está habilitado.</string>
    <string name="Lieuxfavoris">Lieux favoris:</string>
    <string name="Lieuxrécents">Lieux récents:</string>
    <string name="Ajouterladestination">Ajouter la destination</string>
    <string name="Questionsfréquementposéés">Questions fréquement poséés</string>
    <string name="Q1">Comment puis-je obtenir l\'estimation du prix d\'une course?</string>
    <string name="A1">Sur le page d\'acceuil, précisez le lieu de départ et la destination, vous aurez ensuite l\'estimation du tarif* de la course en bas de l\'écran à droite.\n\n*Le tarif peut varier selon le trafic routier.</string>
    <string name="Q2">Ou puis-je trouver les tarifs pour COMINGOO?</string>
    <string name="A2">Les tarifs sont indiqué dans la section \'Comingoo and you\' dans le volet \'paramétres\'</string>
    <string name="Contacteznous">Contactez nous</string>
    <string name="Ajouteruneimage">Ajouter une image</string>
    <string name="Enregistreraudio">Enregistrer audio</string>
    <string name="Envoyer">Envoyer</string>
    <string name="Paramétres">Paramétres</string>
    <string name="Profil">Profil</string>
    <string name="Portefeuille">Porte-feuille</string>
    <string name="Langue">Langue</string>
    <string name="Tarifs">Tarifs</string>
    <string name="Conditions">Conditions d\'utilisation</string>
    <string name="version">Version de l\'application 2.0</string>
    <string name="Nomcomplet">Nom complet</string>
    <string name="Numéro">Numéro de téléphone</string>
    <string name="Changer">Changer votre mot de passe</string>
    <string name="Motdepasseactuel">Mot de passe actuel</string>
    <string name="Nouveaumotdepasse">Nouveau mot de passe</string>
    <string name="Confirmerlenouveaumotdepasse">Confirmer le nouveau mot de passe</string>
    <string name="Confirmer">Confirmer</string>
    <string name="Aujourdhui">Aujourd\'hui</string>
    <string name="Crédit">Crédit</string>
    <string name="Utiliserlecréditenpremier">Utiliser le crédit en premier</string>
    <string name="Tarifspromotionnels">Tarifs promotionnels</string>
    <string name="Départ">Départ</string>
    <string name="Démarreraveccetarif">Démarrer avec ce tarif</string>
    <string name="Courseminimum">Course minimum</string>
    <string name="EnRouteparKm">En Route par Km</string>
    <string name="TarificationparKm">Tarification par Km</string>
    <string name="Enattenteparheure">En attente par heure</string>
    <string name="sapplique">S\'applique quand la voiture est en mouvement en dessous de 16  km/h. Premiére  3min sont gratuites.le temps d\'attente supplémentaire est facturé par minute.</string>
    <string name="pénalité">*Aucune pénalité pour les commandes annulées 2 minutes aprés le confirmation.</string>
    <string name="inviteText">Nous précions l\'amitié, c\'est pourquoi nous vous encourageons à inviter vos amis à utiliser Comingoo et gangez des points que vous pouvez convertir ensuite en crédit Comingoo</string>
    <string name="Inviter">Inviter</string>
    <string name="SeConnecter">Se Connecter</string>
    <string name="signupText">Vous n\'avez pas de compte ?</string>
    <string name="Sinscrire">S\'inscrire</string>
    <string name="loginText">Vous avez deja un compte ?</string>
    <string name="Seconnecter">Se connecter</string>
    <string name="Entrezvotrenumerodetéléphone">Entrez votre numero de téléphone</string>
    <string name="Numérodetéléphone">Numéro de téléphone</string>
    <string name="unCode">Un code de vérification a été envoyé à votre numéro de téléphone, s\'il vous plait saisissez le ici pour continuer.</string>
    <string name="facebookText">Voulez vous s\'inscrire avec votre compte Facebook pour continuer</string>
    <string name="SinscrireavecFacebook">S\'inscrire avec Facebook</string>
    <string name="Détaildelacourse">Détail de la course</string>
    <string name="Détailsdepaiement">Détails de paiement</string>
    <string name="Kilométrage">Kilométrage</string>
    <string name="Tempsdattente">Temps d\'attente</string>
    <string name="Tarifderetard">Tarif de retard</string>
    <string name="Prixdebase">Prix de base</string>
    <string name="Facturetotale">Facture totale</string>
    <string name="Chauffeur">Chauffeur</string>
    <string name="Votrechauffeurestenroute">Votre chauffeur est en route</string>
    <string name="Daccord">D\'accord</string>
    <string name="Votrechauffeurestarrivé">Votre chauffeur est arrivé</string>
    <string name="Montanttotalàpayer">Montant total à payer</string>
    <string name="Evaluezvotreéxperience">Evaluez votre éxperience</string>
    <string name="Noussommesdésolé">Nous sommes désolé</string>
    <string name="whatswrong">Qu\'est ce qui ne s\'est pas bien passé?</string>
    <string name="Heuredarrivée">Heure d\'arrivée</string>
    <string name="Service">Service</string>
    <string name="Etatdelavoiture">Etat de la voiture</string>
    <string name="Conduite">Conduite</string>
    <string name="Itinéraire">Itinéraire</string>
    <string name="Autre">Autre</string>
    <string name="Laissezuncommentaire">Laissez un commentaire?</string>
    <string name="Appreciate">Nous apprécions grandement vos commentaires.\nUtilisez l\'enregisteur vocal pour partager avec nous votre éxpérience avec COMINGOO.</string>
    <string name="PS">PS : Les meilleurs Audios seront utilisés dans notre compagne publicitaire.</string>
    <string name="Record">Maintenez votre doigt sur le Button pour enregistrer.</string>
    <string name="passer">Passer</string>
    <string name="driver_arrived_txt">Chez comingoo, on monte a l\'avant </string>
    <string name="sinch_app_key">185d9822-a953-4af6-a780-b0af1fd31bf7</string>
    <string name="sinch_app_secret">ZiJ6FqH5UEWYbkMZd1rWbw==</string>
    <string name="sinch_envirentmnet_host">sandbox.sinch.com</string>
    <string name="title_activity_confirm_btn">Confirmer address</string>
    <string name="txt_block_time_over">Your blocking time is not over yet.</string>
    <string name="jan">Janvier</string>
    <string name="feb">Février</string>
    <string name="mar">Mars</string>
    <string name="apr">Avril</string>
    <string name="may">Mai</string>
    <string name="jun">Juin</string>
    <string name="jul">Juillet</string>
    <string name="aug">Aout</string>
    <string name="sep">Septembre</string>
    <string name="oct">Octobre</string>
    <string name="nov">Novembre</string>
    <string name="dec">Décembre</string>
    <string name="taha">Taha</string>
    <string name="rows_notification_title">Payement par carte banquaire</string>
    <string name="rows_notification_details_content">TextView</string>
    <string name="apply_btn_txt">Appliquer</string>
    <string name="signup_info_register_txt">S\'inscrire</string>
    <string name="signup_info_fill_the_feilds_txt">Remplissez les champs ci-dessous</string>
    <string name="full_name">Nom complet</string>
    <string name="email">Email</string>
    <string name="password_txt">Mot de passe</string>
    <string name="confirm_password_txt">Confirmer le mot de passe</string>
    <string name="please_enter_a_valid_promo_code">S\'il vous plaît entrer un code promo valide</string>
    <string name="confirm">confirmer</string>
</resources>